福島Project/src/objects/JFK_RodoSyaTR__c.object
<CustomObject>
    <description>JFK</description>
    <fields>
        <fullName>Biko__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BosyuKai__c</fullName>
        <formula>JigyosyoTR_ShikyuJiki__r.BosyuJoho_ShikyuJiki__r.Bosyu__r.BosyuKai__c</formula>
        <label>募集回</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BosyuNendo__c</fullName>
        <formula>JigyosyoTR_ShikyuJiki__r.BosyuJoho_ShikyuJiki__r.Bosyu__r.BosyuNendo__c</formula>
        <label>募集年度</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_HasseiBi__c</fullName>
        <description>エラーが発生した日付</description>
        <label>エラー発生日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Hassei__c</fullName>
        <defaultValue>false</defaultValue>
        <description>支給額計算など、この労働者に関する処理上のエラーが発生した場合に設定される</description>
        <label>エラー発生</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_HasseijinoTantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>エラー発生フラグが設定されたときに処理を実施した担当者</description>
        <label>エラー発生時の担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_HasseijinoTantosyas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Naiyo__c</fullName>
        <description>エラー内容
複数のエラーがある場合は必要に応じて改行</description>
        <label>エラー内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Henko_KoyoKeitai__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>変更後の雇用形態
当該支給時期に変更がなければ、前期雇用形態を設定する</description>
        <inlineHelpText>当該支給時期に変更がなければ、前期雇用形態を設定する</inlineHelpText>
        <label>変更雇用形態</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipLabel>労働者TR (変更雇用形態)</relationshipLabel>
        <relationshipName>Henko_KoyoKeitais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HojuRodosyaFLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>補充労働者</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JK_Bikoran__c</fullName>
        <description>JK備考欄表示内容
該当するものすべてを選択する</description>
        <label>JK備考欄表示内容</label>
        <picklist>
            <picklistValues>
                <fullName>再雇用率8割超による停止期間あり。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>必要労働者数未達による停止期間あり。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1ヶ月と1日以上連続無給欠勤による停止期間あり。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>支給決定日前に離職したため、支給額算定せず。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>申請が取り下げられたため、支給額算定せず。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>支給要件を満たさないため、支給額算定せず。</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>JigyosyoTR_ShikyuJiki__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>事業所TR（支給時期）</label>
        <referenceTo>JFK_JigyosyoTR__c</referenceTo>
        <relationshipName>JigyosyoTR_ShikyuJikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JissaiNoShikyuKikan_KaishiBi__c</fullName>
        <description>支給時期内で実際に支給が開始された日</description>
        <label>実際の支給対象期間開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JissaiNoShikyuKikan_SyuryoBi__c</fullName>
        <description>支給時期内で実際に支給が終了した日</description>
        <label>実際の支給対象期間終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JissekiShikyuKingaku_1stYear__c</fullName>
        <description>1年目の実績支給金額</description>
        <label>1年目実績支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JissekiShikyuKingaku_2nsYear__c</fullName>
        <description>2年目の実績支給金額</description>
        <label>2年目実績支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JissekiShikyuKingaku_3rdYear__c</fullName>
        <description>3年目の実績支給金額</description>
        <label>3年目実績支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KaiMe__c</fullName>
        <formula>JigyosyoTR_ShikyuJiki__r.BosyuJoho_ShikyuJiki__r.KaiMe__c</formula>
        <label>○回目</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KikannaiRisyoku__c</fullName>
        <defaultValue>false</defaultValue>
        <description>当該支給期間に離職があればチェックを入れる</description>
        <label>期間内離職有</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KoyoKeitai_HenkoAri_1stYear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1年目単価の最中に雇用形態の変更があったら設定</description>
        <label>1年目雇用形態変更有</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KoyoKeitai_HenkoAri_2nsYear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2年目単価の最中に雇用形態の変更があったら設定</description>
        <label>2年目雇用形態変更有</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KoyoKeitai_HenkoAri_3rdYear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3年目単価の最中に雇用形態の変更があったら設定</description>
        <label>3年目雇用形態変更有</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KoyoKeitai_HenkoKaishiBi__c</fullName>
        <description>雇用形態が変更になった初日</description>
        <label>雇用形態変更開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KoyoKeiyaku_SyuryoBi__c</fullName>
        <description>当該支給時期に申請された雇用契約期間（終）
この項目が設定されていることと、離職したことは別</description>
        <label>雇用契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KyushiDays_1stYear__c</fullName>
        <description>1年目の休止日数</description>
        <label>1年目休止日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KyushiDays_2nsYear__c</fullName>
        <description>2年目の休止日数</description>
        <label>2年目休止日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KyushiDays_3rdYear__c</fullName>
        <description>3年目の休止日数</description>
        <label>3年目休止日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NenMe__c</fullName>
        <formula>JigyosyoTR_ShikyuJiki__r.BosyuJoho_ShikyuJiki__r.NenMe__c</formula>
        <label>○年目</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokoriKingaku_1stYear__c</fullName>
        <description>1年目単価の支給最後の支給時期に追加される、ここまでの1,000円未満切り捨ての総額</description>
        <label>1年目残金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokoriKingaku_2nsYear__c</fullName>
        <description>2年目単価の支給最後の支給時期に追加される、ここまでの1,000円未満切り捨ての総額</description>
        <label>2年目残金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokoriKingaku_3rdYear__c</fullName>
        <description>3年目単価の支給最後の支給時期に追加される、ここまでの1,000円未満切り捨ての総額</description>
        <label>3年目残金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rodosya__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>労働者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Rodosyas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShikyuDays_1stYear__c</fullName>
        <description>1年目の支給日数</description>
        <label>1年目支給日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShikyuDays_2nsYear__c</fullName>
        <description>2年目の支給日数</description>
        <label>2年目支給日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShikyuDays_3rdYear__c</fullName>
        <description>3年目の支給日数</description>
        <label>3年目支給日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShikyuJissekiKingaku__c</fullName>
        <label>支給実績金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuKetteiKingaku__c</fullName>
        <label>支給決定金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuTaisyoDays__c</fullName>
        <description>当該時期の支給対象日数</description>
        <label>支給対象日数</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TeishiDays_1stYear__c</fullName>
        <description>1年目の停止日数</description>
        <label>1年目停止日数</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TeishiDays_2nsYear__c</fullName>
        <description>2年目の停止日数</description>
        <label>2年目停止日数</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TeishiDays_3rdYear__c</fullName>
        <description>3年目の停止日数</description>
        <label>3年目停止日数</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YoteiNokoriKingaku_1stYear__c</fullName>
        <description>1年目単価の支給最後の支給時期に追加される、ここまでの1,000円未満切り捨ての総額</description>
        <label>1年目予定残金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YoteiNokoriKingaku_2nsYear__c</fullName>
        <description>2年目単価の支給最後の支給時期に追加される、ここまでの1,000円未満切り捨ての総額</description>
        <label>2年目予定残金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YoteiNokoriKingaku_3rdYear__c</fullName>
        <description>3年目単価の支給最後の支給時期に追加される、ここまでの1,000円未満切り捨ての総額</description>
        <label>3年目予定残金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YoteiShikyuDays_1stYear__c</fullName>
        <description>1年目の支給予定日数</description>
        <label>1年目予定支給日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YoteiShikyuDays_2nsYear__c</fullName>
        <description>2年目の支給予定日数</description>
        <label>2年目予定支給日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YoteiShikyuDays_3rdYear__c</fullName>
        <description>3年目の支給予定日数</description>
        <label>3年目予定支給日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YoteiShikyuKingaku_1stYear__c</fullName>
        <description>1年目の予定支給金額</description>
        <label>1年目予定支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YoteiShikyuKingaku_2nsYear__c</fullName>
        <description>2年目の予定支給金額</description>
        <label>2年目予定支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YoteiShikyuKingaku_3rdYear__c</fullName>
        <description>3年目の予定支給金額</description>
        <label>3年目予定支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YoteiZanDays_1stYear__c</fullName>
        <description>1年目の予定残日数</description>
        <label>1年目予定残日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YoteiZanDays_2nsYear__c</fullName>
        <description>2年目の予定残日数</description>
        <label>2年目予定残日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YoteiZanDays_3rdYear__c</fullName>
        <description>3年目の予定残日数</description>
        <label>3年目予定残日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZanDays_1stYear__c</fullName>
        <description>1年目の残り支給日数</description>
        <label>1年目残日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZanDays_2nsYear__c</fullName>
        <description>2年目の残り支給日数</description>
        <label>2年目残日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZanDays_3rdYear__c</fullName>
        <description>3年目の残り支給日数</description>
        <label>3年目残日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zenki_KoyoKeitai__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>前期までの雇用形態
1-1では労働者の「雇用形態」を設定する
1-2以降では前期の「変更雇用形態」を設定する</description>
        <inlineHelpText>1-1では労働者の「雇用形態」を設定する
1-2以降では前期の「変更雇用形態」を設定する</inlineHelpText>
        <label>前期雇用形態</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipLabel>労働者TR</relationshipLabel>
        <relationshipName>Zenki_KoyoKeitais</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>労働者TR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JigyosyoTR_ShikyuJiki__c</columns>
        <columns>Rodosya__c</columns>
        <columns>ShikyuJissekiKingaku__c</columns>
        <columns>ShikyuKetteiKingaku__c</columns>
        <columns>HojuRodosyaFLG__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>